sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:4: error: not found: value ecart
ecart  = getNombreValeurs()-2
^AlgCombSort:7: error: not found: value ecart
	if (ecart>1){
            ^AlgCombSort:8: error: not found: value ecart
		ecart=(ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int]
                ^AlgCombSort:10: error: not found: value ecart
	while (i+ecart < getNombreValeurs()-2 ){
                 ^AlgCombSort:14: error: not found: value ecart
while (ecart>1)
       ^